--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <body>
         <div class="container"> <!-- fundo -->
-        <img src="../img/fundo.png" alt="Imagem de fundo" class="background-image">
+        <img src="./img/fundo.png" alt="Imagem de fundo" class="background-image">
         <div class="conteudo"> <!-- fundo -->
         
         
