--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         
             <div  class="titulo"> <!--titulo-->
                 <h1>Convert Money</h1>
-                <img src="../img/logo.gif" alt="logo" id="logo"> <!-- Logo -->
+                <img src="./img/logo.gif" alt="logo" id="logo"> <!-- Logo -->
             </div>
 
         <div id="mae"> <!-- caixa branca-->
