--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
              <section> <!--local daa converção-->
 
                     <div class="currency"> <!--converter -->
-                        <img src="../img/brasil 2.png" alt="logo Brasil">
+                        <img src="./img/brasil 2.png" alt="logo Brasil">
                         <p class="currency-real">Real</p>
                         <p class="currency-value">R$ 0,00</p>
                     </div>
@@ -64,7 +64,7 @@
                     <img class="arrow" src="../img/Vector.png" alt="setinha">
 
                     <div class="currency"> <!--convertido-->
-                        <img class="imgtroca" src="../img/euro.png" alt="moeda convertida US$">
+                        <img class="imgtroca" src="./img/euro.png" alt="moeda convertida US$">
                         <p class="currency-reall" >US$</p>
                         <p class="currency-value-dolar">R$ 0,00</p>
                     </div>
