--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                         <p class="currency-value">R$ 0,00</p>
                     </div>
 
-                    <img class="arrow" src="../img/Vector.png" alt="setinha">
+                    <img class="arrow" src="./img/Vector.png" alt="setinha">
 
                     <div class="currency"> <!--convertido-->
                         <img class="imgtroca" src="./img/euro.png" alt="moeda convertida US$">
