--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                     <img class="arrow" src="./img/Vector.png" alt="setinha">
 
                     <div class="currency"> <!--convertido-->
-                        <img class="imgtroca" src="./img/euro.png" alt="moeda convertida US$">
+                        <img class="imgtroca" src="./img/unidos.png" alt="moeda convertida US$">
                         <p class="currency-reall" >US$</p>
                         <p class="currency-value-dolar">R$ 0,00</p>
                     </div>
