--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
              <section> <!--local daa converção-->
 
                     <div class="currency"> <!--converter -->
-                        <img src="./img/brasil 2.png" alt="logo Brasil">
+                        <img class="brazil" src="./img/brasil 2.png" alt="logo Brasil">
                         <p class="currency-real">Real</p>
                         <p class="currency-value">R$ 0,00</p>
                     </div>
